refactor(jmh): apply Java code maintenance standards to production code
- Remove @author Generated tags from all 17 source files
- Refactor BenchmarkContextManager long methods into smaller, focused methods
- Add constants for magic numbers and default JMH configuration values
- Improve TokenRepository exception handling with custom TokenFetchException
- Add @NonNull annotations to TokenRepository public APIs
- Modernize MetricsPostProcessor switch statement to switch expression
- Extract magic numbers to constants across all classes
- Apply OpenRewrite formatting and modernization improvements:
  - Optimize imports and ordering
  - Use modern Java features (String.formatted, Path.of)
  - Improve code formatting consistency

All 43 tests pass successfully. Code now fully complies with Java code
maintenance standards while maintaining all functionality.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>