@@ -17,14 +17,12 @@ package de.cuioss.jwt.quarkus.benchmark.metrics;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
-import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 
 import java.io.File;
 import java.io.FileReader;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Instant;
 import java.util.HashMap;
 import java.util.Map;
@@ -34,35 +32,35 @@ import java.util.Map;
  * by simulating the export with test data.
  */
 public class TestMetricsExportIntegration {
-    
+
     private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
-    
+
     public static void main(String[] args) throws Exception {
         // Create temporary directory for output
         Path tempDir = Files.createTempDirectory("metrics-test");
         System.out.println("Using temp directory: " + tempDir);
-        
+
         // Create test metrics fetcher with sample data
         MetricsFetcher testFetcher = new TestMetricsFetcher();
-        
+
         // Create exporter
         SimpleMetricsExporter exporter = new SimpleMetricsExporter(tempDir.toString(), testFetcher);
-        
+
         // Simulate exporting metrics for JWT validation benchmarks
         String[] benchmarks = {
-            "JwtValidationBenchmark.validateJwtThroughput",
-            "JwtValidationBenchmark.validateAccessTokenThroughput",
-            "JwtValidationBenchmark.validateIdTokenThroughput",
-            "JwtValidationBenchmark.validateJwtLatency",
-            "JwtEchoBenchmark.echoGetThroughput",  // Should be filtered out
-            "JwtHealthBenchmark.healthCheckLatency" // Should be filtered out
+                "JwtValidationBenchmark.validateJwtThroughput",
+                "JwtValidationBenchmark.validateAccessTokenThroughput",
+                "JwtValidationBenchmark.validateIdTokenThroughput",
+                "JwtValidationBenchmark.validateJwtLatency",
+                "JwtEchoBenchmark.echoGetThroughput",  // Should be filtered out
+                "JwtHealthBenchmark.healthCheckLatency" // Should be filtered out
         };
-        
+
         for (String benchmark : benchmarks) {
             exporter.exportJwtValidationMetrics(benchmark, Instant.now());
             Thread.sleep(100); // Small delay to ensure different timestamps
         }
-        
+
         // Read and display the result
         File resultFile = new File(tempDir.toFile(), "integration-jwt-validation-metrics.json");
         if (resultFile.exists()) {
@@ -70,14 +68,14 @@ public class TestMetricsExportIntegration {
             System.out.println("=====================================");
             String content = Files.readString(resultFile.toPath());
             System.out.println(content);
-            
+
             // Verify structure
             JsonObject json = GSON.fromJson(new FileReader(resultFile), JsonObject.class);
             System.out.println("\nVerification:");
             System.out.println("- Number of benchmarks: " + json.size());
             System.out.println("- Contains JwtEchoBenchmark: " + json.has("echoGetThroughput"));
             System.out.println("- Contains JwtHealthBenchmark: " + json.has("healthCheckLatency"));
-            
+
             // Check one benchmark in detail
             if (json.has("validateJwtThroughput")) {
                 JsonObject benchmark = json.getAsJsonObject("validateJwtThroughput");
@@ -85,12 +83,12 @@ public class TestMetricsExportIntegration {
                 System.out.println("- Has timestamp: " + benchmark.has("timestamp"));
                 System.out.println("- Has steps: " + benchmark.has("steps"));
                 System.out.println("- Has bearer_token_producer_metrics: " + benchmark.has("bearer_token_producer_metrics"));
-                
+
                 if (benchmark.has("steps")) {
                     JsonObject steps = benchmark.getAsJsonObject("steps");
                     System.out.println("- Number of steps: " + steps.size());
                 }
-                
+
                 if (benchmark.has("bearer_token_producer_metrics")) {
                     JsonObject httpMetrics = benchmark.getAsJsonObject("bearer_token_producer_metrics");
                     System.out.println("- Number of bearer token producer metrics: " + httpMetrics.size());
@@ -99,33 +97,33 @@ public class TestMetricsExportIntegration {
         } else {
             System.err.println("ERROR: integration-jwt-validation-metrics.json was not created!");
         }
-        
+
         // Clean up
         Files.deleteIfExists(resultFile.toPath());
         Files.delete(tempDir);
     }
-    
+
     /**
      * Test metrics fetcher that loads data from test resource files
      */
     private static class TestMetricsFetcher implements MetricsFetcher {
-        
+
         @Override
         public Map<String, Double> fetchMetrics() {
             try {
                 String testDataPath = "cui-jwt-quarkus-parent/quarkus-integration-jmh/src/test/resources/sample-jwt-validation-metrics.txt";
-                String content = Files.readString(Paths.get(testDataPath));
-                
+                String content = Files.readString(Path.of(testDataPath));
+
                 Map<String, Double> metrics = new HashMap<>();
                 parseQuarkusMetrics(content, metrics);
                 return metrics;
-                
+
             } catch (Exception e) {
                 System.err.println("Failed to load test metrics: " + e.getMessage());
                 return new HashMap<>();
             }
         }
-        
+
         private void parseQuarkusMetrics(String responseBody, Map<String, Double> results) {
             String[] lines = responseBody.split("\n");
             for (String line : lines) {
